Regresion: Scale strips in nla with snap active seems broken #113505

Closed
opened 2023-10-10 17:13:36 +02:00 by Guillermo Venegas · 6 comments
Contributor

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-09 22:55, hash: a935701a872d
Worked: (newest version of Blender that worked as expected)

Short description of error
Scale strips in nla seems broken

Exact steps for others to reproduce the error

  1. With default cube add some key frames, change current frame and add some more of the same type
  2. Go to NLA and push down the generated action
  3. Scale the action with different snap options flickers
3.6 main
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-09 22:55, hash: `a935701a872d` Worked: (newest version of Blender that worked as expected) **Short description of error** Scale strips in nla seems broken **Exact steps for others to reproduce the error** 1. With default cube add some key frames, change current frame and add some more of the same type 2. Go to NLA and push down the generated action 3. Scale the action with different snap options flickers |3.6|main| |---|---| |<video src="/attachments/5e030858-668a-42e5-b12e-1dabf64ac3f5" title="2023-10-10 09-08-54.mp4" controls></video>|<video src="/attachments/ae4ae0ba-a2c0-4e5f-bbe4-7a4a7b2fac90" title="2023-10-10 09-05-21.mp4" controls></video>|
Guillermo Venegas added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-10-10 17:13:37 +02:00

I can't reproduce this. Can you share .blend file? Also you say scale, but are you scaling or moving the strip?

I can't reproduce this. Can you share .blend file? Also you say scale, but are you scaling or moving the strip?
Author
Contributor

scale_strip_bug.blend

Also you say scale, but are you scaling or moving the strip?

Yes, the header shows
image

[scale_strip_bug.blend](/attachments/7ec8f021-713c-48fd-bba5-627657153abc) >Also you say scale, but are you scaling or moving the strip? Yes, the header shows ![image](/attachments/4f458baf-db67-43e0-9a88-85b1529bb91e)
Guillermo Venegas changed title from Regresion: Scale strips in nla seems broken to Regresion: Scale strips in nla with snap seems broken 2023-10-10 23:39:46 +02:00
Guillermo Venegas changed title from Regresion: Scale strips in nla with snap seems broken to Regresion: Scale strips in nla with snap active seems broken 2023-10-10 23:40:10 +02:00
Member

Thanks for the report. I can confirm the regression.

Thanks for the report. I can confirm the regression.
Member

First bad commit: fb556c75df
@mano-wii ^

First bad commit: fb556c75df4ce336e61aa9ba16aa4c853548f06d @mano-wii ^
Pratik Borhade added this to the 4.0 milestone 2023-10-11 06:42:57 +02:00

First bad commit: fb556c75df
@mano-wii ^

I think there may have been a misunderstanding due to a versioning problem that was introduced in that commit and fixed 3 days later. That problem caused snap to be disabled in some versions.

Apparently, the problem was actually introduced by bd305c8d18, which seems to have only considered the Move transformation in that new feature.

So @ChrisLend, can you take a look?

You might be interested in using the snap_distance_fn callback to detect the "smallest" value according to the mode.

> First bad commit: fb556c75df4ce336e61aa9ba16aa4c853548f06d > @mano-wii ^ I think there may have been a misunderstanding due to a versioning problem that was introduced in that commit and fixed 3 days later. That problem caused snap to be disabled in some versions. Apparently, the problem was actually introduced by bd305c8d18, which seems to have only considered the Move transformation in that new feature. So @ChrisLend, can you take a look? You might be interested in using the `snap_distance_fn` callback to detect the "smallest" value according to the mode.
Germano Cavalcante self-assigned this 2023-10-11 14:58:08 +02:00

I think the solution could be quite complex within the snap system. I'm investigating (since I'm familiar with the code).

I think the solution could be quite complex within the snap system. I'm investigating (since I'm familiar with the code).
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-20 14:25:13 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113505
No description provided.