Fix #113505: Scale strips in nla with snap active seems broken

Possibly caused by bd305c8d18

`snap_transform_data` adds an offset to each element being transformed.

But this seems to only apply to Move or Extend transformations.

This solution makes the NLA transform scheme more generic.

The advantages are:
- Greater compatibility with transformation modes
- Header shows the value actually being transformed.