source/blender/editors/transform/transform_convert_nla.cc
@@ -634,66 +634,11 @@ static void createTransNlaData(bContext *C, TransInfo *t)
   ANIM_animdata_freelist(&anim_data);
 }
 
-static void invert_snap(eSnapMode &snap_mode)
-{
-  if (snap_mode & SCE_SNAP_TO_FRAME) {
-    snap_mode &= ~SCE_SNAP_TO_FRAME;
-    snap_mode |= SCE_SNAP_TO_SECOND;
-  }
-  else if (snap_mode & SCE_SNAP_TO_SECOND) {
-    snap_mode &= ~SCE_SNAP_TO_SECOND;
-    snap_mode |= SCE_SNAP_TO_FRAME;
-  }
-}
-
-static void snap_transform_data(TransInfo *t, TransDataContainer *tc)
-{
-  /* handle auto-snapping
-   * NOTE: only do this when transform is still running, or we can't restore
-   */
-  if (t->state == TRANS_CANCEL) {
-    return;
-  }
-  if ((t->tsnap.flag & SCE_SNAP) == 0) {
-    return;
-  }
-
-  eSnapMode snap_mode = t->tsnap.mode;
-  if (t->modifiers & MOD_SNAP_INVERT) {
-    invert_snap(snap_mode);
-  }
-
-  float offset = 0;
-  float smallest_snap_delta = FLT_MAX;
-
-  /* In order to move the strip in a block and not each end individually,
-   * find the minimal snap offset first and then shift the whole strip by that amount. */
-  for (int i = 0; i < tc->data_len; i++) {
-    TransData td = tc->data[i];
-    float snap_value;
-    transform_snap_anim_flush_data(t, &td, snap_mode, &snap_value);
-
-    /* The snap_delta measures how far from the unsnapped position the value has moved. */
-    const float snap_delta = *td.loc - snap_value;
-    if (fabs(snap_delta) < fabs(smallest_snap_delta)) {
-      offset = snap_value - td.iloc[0];
-      smallest_snap_delta = snap_delta;
-    }
-  }
-
-  for (int i = 0; i < tc->data_len; i++) {
-    TransData td = tc->data[i];
-    *td.loc = td.iloc[0] + offset;
-  }
-}
-
 static void recalcData_nla(TransInfo *t)
 {
   SpaceNla *snla = (SpaceNla *)t->area->spacedata.first;
-
+  
   TransDataContainer *tc = TRANS_DATA_CONTAINER_FIRST_SINGLE(t);
-
-  snap_transform_data(t, tc);
 
   /* For each strip we've got, perform some additional validation of the values
    * that got set before using RNA to set the value (which does some special
