source/blender/editors/transform/transform_mode_timescale.cc
@@ -33,6 +33,14 @@
 /** \name Transform (Animation Time Scale)
  * \{ */
 
+static void timescale_snap_apply_fn(TransInfo *t, float vec[3])
+{
+  float point[3];
+  getSnapPoint(t, point);
+  float fac = (point[0] - t->center_global[0]) / (t->tsnap.snap_source[0] - t->center_global[0]);
+  vec[0] = fac;
+}
+
 static void headerTimeScale(TransInfo *t, char str[UI_MAX_DRAW_STR])
 {
   char tvec[NUM_STR_REP_LEN * 3];
@@ -84,6 +92,9 @@ static void applyTimeScale(TransInfo *t)
   /* handle numeric-input stuff */
   t->vec[0] = t->values[0];
   applyNumInput(&t->num, &t->vec[0]);
+
+  transform_snap_mixed_apply(t, &t->vec[0]);
+
   t->values_final[0] = t->vec[0];
   headerTimeScale(t, str);
 
@@ -92,6 +103,15 @@ static void applyTimeScale(TransInfo *t)
   recalc_data(t);
 
   ED_area_status_text(t->area, str);
+}
+
+static void timescale_transform_matrix_fn(TransInfo *t, float mat_xform[4][4])
+{
+  float i_loc = mat_xform[3][0];
+  float startx = t->center_global[0];
+  float fac = t->values_final[0];
+  float loc = ((i_loc - startx) * fac) + startx;
+  mat_xform[3][0] = loc;
 }
 
 static void initTimeScale(TransInfo *t, wmOperator * /*op*/)
@@ -141,9 +161,9 @@ TransModeInfo TransMode_timescale = {
     /*flags*/ T_NULL_ONE,
     /*init_fn*/ initTimeScale,
     /*transform_fn*/ applyTimeScale,
-    /*transform_matrix_fn*/ nullptr,
+    /*transform_matrix_fn*/ timescale_transform_matrix_fn,
     /*handle_event_fn*/ nullptr,
     /*snap_distance_fn*/ nullptr,
-    /*snap_apply_fn*/ nullptr,
+    /*snap_apply_fn*/ timescale_snap_apply_fn,
     /*draw_fn*/ nullptr,
 };
