source/blender/editors/transform/transform_snap_animation.cc
@@ -8,6 +8,8 @@
 
 #include "DNA_anim_types.h"
 
+#include "BLI_math_matrix_types.hh"
+
 #include "BKE_context.h"
 #include "BKE_nla.h"
 
@@ -16,6 +18,8 @@
 
 #include "transform.hh"
 #include "transform_snap.hh"
+
+using namespace blender;
 
 /* -------------------------------------------------------------------- */
 /** \name Snapping in Anim Editors
@@ -68,14 +72,11 @@ void snapFrameTransform(TransInfo *t,
   }
 }
 
-void transform_snap_anim_flush_data(TransInfo *t,
-                                    TransData *td,
-                                    const eSnapMode snap_mode,
-                                    float *r_val_final)
+static void transform_snap_anim_flush_data_ex(
+    TransInfo *t, TransData *td, float val, const eSnapMode snap_mode, float *r_val_final)
 {
   BLI_assert(t->tsnap.flag);
 
-  float val = td->loc[0];
   float ival = td->iloc[0];
   AnimData *adt = static_cast<AnimData *>(!ELEM(t->spacetype, SPACE_NLA, SPACE_SEQ) ? td->extra :
                                                                                       nullptr);
@@ -94,6 +95,77 @@ void transform_snap_anim_flush_data(TransInfo *t,
   }
 
   *r_val_final = val;
+}
+
+void transform_snap_anim_flush_data(TransInfo *t,
+                                    TransData *td,
+                                    const eSnapMode snap_mode,
+                                    float *r_val_final)
+{
+  transform_snap_anim_flush_data_ex(t, td, td->loc[0], snap_mode, r_val_final);
+}
+
+static void invert_snap(eSnapMode &snap_mode)
+{
+  if (snap_mode & SCE_SNAP_TO_FRAME) {
+    snap_mode &= ~SCE_SNAP_TO_FRAME;
+    snap_mode |= SCE_SNAP_TO_SECOND;
+  }
+  else if (snap_mode & SCE_SNAP_TO_SECOND) {
+    snap_mode &= ~SCE_SNAP_TO_SECOND;
+    snap_mode |= SCE_SNAP_TO_FRAME;
+  }
+}
+
+/* WORKAROUND: The source position is based on the transformed elements.
+ * However, at this stage, the transformation has not yet been applied.
+ * So apply the transformation here. */
+static float nla_transform_apply(TransInfo *t, float *vec, float ival)
+{
+  float4x4 mat = float4x4::identity();
+
+  float values_final_prev[4];
+  size_t values_final_size = sizeof(*t->values_final) * size_t(t->idx_max + 1);
+  memcpy(values_final_prev, t->values_final, values_final_size);
+  memcpy(t->values_final, vec, values_final_size);
+
+  mat[3][0] = ival;
+  transform_apply_matrix(t, mat.ptr());
+
+  memcpy(t->values_final, values_final_prev, values_final_size);
+
+  return mat.location()[0];
+}
+
+bool transform_snap_nla_calc(TransInfo *t, float *vec)
+{
+  TransDataContainer *tc = TRANS_DATA_CONTAINER_FIRST_SINGLE(t);
+
+  eSnapMode snap_mode = t->tsnap.mode;
+  if (t->modifiers & MOD_SNAP_INVERT) {
+    invert_snap(snap_mode);
+  }
+
+  float best_dist = FLT_MAX, best_target = 0.0f, best_source = 0.0f;
+
+  for (int i = 0; i < tc->data_len; i++) {
+    TransData *td = &tc->data[i];
+    float snap_source = td->iloc[0];
+    float snap_target;
+    float source_transformed = nla_transform_apply(t, vec, snap_source);
+
+    transform_snap_anim_flush_data_ex(t, td, source_transformed, snap_mode, &snap_target);
+    int dist = abs(snap_target - snap_source);
+    if (dist != 0.0f && dist < best_dist) {
+      best_dist = dist;
+      best_target = snap_target;
+      best_source = snap_source;
+    }
+  }
+
+  t->tsnap.snap_target[0] = best_target;
+  t->tsnap.snap_source[0] = best_source;
+  return true;
 }
 
 /** \} */
